[package]
name = "scientific-macro"
version = "0.5.0"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "Macro for scientific, the arbitrary precision scientific number. Not intended to be used directly."
repository = "https://github.com/alexkazik/scientific"
license = "MIT"
keywords = ["arbitrary", "precision", "scientific", "no_std"]
categories = ["mathematics", "science", "no-std"]
rust-version = "1.65.0"

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["parsing", "proc-macro"] }

[lib]
proc-macro = true
