[package]
name = "scientific"
version = "0.5.1"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "Arbitrary precision scientific number (no_std capable, in pure Rust)"
repository = "https://github.com/alexkazik/scientific"
license = "MIT"
keywords = ["arbitrary", "precision", "scientific", "no_std"]
categories = ["mathematics", "science", "no-std"]

[dependencies]
serde = { version = "1.0.16", optional = true }
scientific-macro = { path = "../scientific-macro", version = "0.5", optional = true }

[dev-dependencies]
rand = "0.8"
num-integer = "0.1.39"

[features]
default = ['macro']
std = []
arc = []
debug = []
macro = ["scientific-macro"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
