[package]
name = "scientific"
version = "0.5.2"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "Arbitrary precision scientific number (no_std capable, in pure Rust)"
repository = "https://github.com/alexkazik/scientific"
license = "MIT"
keywords = ["arbitrary", "precision", "scientific", "no_std"]
categories = ["mathematics", "science", "no-std"]
readme = "README.md"
rust-version = "1.65.0"

[dependencies]
serde = { version = "1.0.16", optional = true }
scientific-macro = { path = "../scientific-macro", version = "0.5.2", optional = true }

[dev-dependencies]
rand = "0.8"
num-integer = "0.1.39"
serde_json = "1.0.108"
postcard = "1.0.8"

[features]
default = ['macro']
std = []
arc = []
debug = []
macro = ["scientific-macro"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(no_re_export)'] }
